--- a/src/components/TabBox/styles.module.css
+++ b/src/components/TabBox/styles.module.css
@@ -1,4 +1,5 @@
 .content{
+    order: 2;
     padding-right: 10px;
     padding-left: 10px;
 }
