--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,6 +3,7 @@
   --padding: 25px;
   --sidebar-width: 325px;
   --sidebar-color: #99ccff;
+  --comment-box-height: 1000px;
 }
 
 
