--- a/src/views/main/styles.module.css
+++ b/src/views/main/styles.module.css
@@ -2,7 +2,10 @@
 @import url("../../styles/queries.css");
 
 .wrapper {
+
   overflow-y: scroll;
+  position: relative;
+  width: 100%;
   display: flex;
   margin: 0;
   
@@ -14,7 +17,7 @@
   background: rgb(244,244,244);
 
   /*this breaks the comment box displaying next to the sidebar*/
-  /*flex-direction: column;*/
+  flex-direction: row;
 
   /*@media (--screen-phone-lg) {
     flex-direction: row;
@@ -29,7 +32,6 @@
 
   flex: 1;
   order: 1;
-
   /*@media (--screen-phone-lg) {
     flex: 2;
     order: 2;
